hopefully fixed the cutoff issue with the text

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
 
 #logo {
 	position: fixed;
+	top: 0;
 	padding-top: 100px;
 	width: 100%;
 	height: 800px;
@@ -28,14 +29,15 @@ body {
 
 #info {
 	position: fixed;
-	left: 0;
-	right: 0;
+	left: 50%;
+	margin-left: -218px;
 	top: 500px;
+	height: 100px;
 	z-index: 5;
 	text-align: center;
 	color: #fff;
 	font-family: 'Bubbler One';
-	font-size: 2.5em;
+	font-size: 3.5em;
 	text-shadow: 0px 0px 5px #fff;
 }
 
